--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
   "dependencies": {
     "@noble/hashes": "1.4.0",
     "@radix-ui/react-toggle-group": "1.1.2",
-    "@solana/web3.js": "^1.95.0",
+    "@solana/web3.js": "1.95.0",
     "@uiw/react-json-view": "2.0.0-alpha.39",
-    "bech32": "^2.0.0",
-    "bs58": "^5.0.0",
+    "bech32": "2.0.0",
+    "bs58": "5.0.0",
     "next": "15.5.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -31,7 +31,7 @@
     "eslint": "8.25.0",
     "eslint-config-next": "15.2.3",
     "postcss": "8.4.49",
-    "postcss-preset-env": "^9.5.5",
+    "postcss-preset-env": "9.5.5",
     "tailwindcss": "3.2.7",
     "typescript": "5.3.3"
   },
