--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@uiw/react-json-view": "2.0.0-alpha.39",
     "bech32": "2.0.0",
     "bs58": "5.0.0",
+    "cbor": "10.0.11",
     "next": "15.5.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
